# amazon-kinesis-data-analytics-examples

./: .gitignore  CONTRIBUTING.md  README.md
AvroGlueSchemaRegistryKafka/: README.md  pom.xml
AvroGlueSchemaRegistryKinesis/: .gitignore  README.md  pom.xml
Beam/: pom.xml
Beam-S3-Sink/: dependency-reduced-pom.xml  pom.xml
CloudWatchSink/: README.md  pom.xml
Converting-KDASQL-KDAStudio/: readme.md
CustomKeystore/: README.md  pom.xml
CustomKeystoreTableAPI/: README.md  pom.xml
CustomKeystoreWithConfigProviders/: README.md  pom.xml
CustomMetrics/: README.md
DeltaConnector/: README.md
EfoConsumer/: README.md  pom.xml
EventEnrichment/: README.md  pom.xml
FirehoseSink/: README.md  pom.xml
FlinkStateFun/: README.md
FlinkStateFun/python/greeter/cdk/lambda/: index.py  pyproject.toml
GettingStarted/: dependency-reduced-pom.xml  pom.xml
GettingStartedTable/: README.md  pom.xml
GettingStarted_1_11/: pom.xml
GettingStarted_1_13/: pom.xml
GettingStarted_1_6/: pom.xml
GettingStarted_1_8/: pom.xml
HudiConnector/: .gitignore  .project  dependency-reduced-pom.xml  pom.xml
KafkaConnectors/: README.md  cloudformation.yaml  deploy.sh  pom.xml  start.sh  stop.sh
KeyspacesSink/: pom.xml
LambdaSink/: pom.xml
S3ParquetSink/: README.md  pom.xml
S3Sink/: README.md  dependency-reduced-pom.xml  pom.xml
SASLSCRAMAuth/: .gitignore  README.md  pom.xml
SQSSink/: pom.xml
ScheduledScaling/: .gitignore  README.md  kda-scaler-lambda.py
SlidingWindow/: README.md  pom.xml
TumblingWindow/: README.md  pom.xml
TumblingWindowKafka/: README.md  (+1 more)
(+226 files in other folders)
