[tool.poetry]
name = "lambda"
version = "0.1.0"
description = ""
authors = ["Steffen Hausmann <shausma@amazon.de>"]

[tool.poetry.dependencies]
python = "^3.9"
apache-flink-statefun = "3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
